# garlic

./: .gitignore  CMakeLists.txt  MCP-SERVER.CN.md  MCP-SERVER.md  README.CN.md  README.md  build.sh  build.zig  build.zig.zon
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: arm.md  build-garlic-on-windows.md  dex.md  elf.md  garlic-on-windows.md  pe.md
shell/: check_leaks.sh  dex_opcode_helper.rb  generate_xcode_project.sh  jvm_opcode_hash.rb  jvm_opcode_helper.rb  max_line.rb  valgrind.sh
src/: garlic.c  jvm.c
src/ai/: jd_mcp.h  jd_mcp_server.c  jd_mcp_tools.c
src/analyzer/: jd_analyzer.c  jd_analyzer.h  jd_api_matcher.c  jd_api_matcher.h  jd_string_analyzer.h
src/apk/: apk.c  apk.h  apk_manifest.c  apk_manifest.h
src/common/: debug.h  endian.h  endian_osx.h  endian_x.h  file_tools.h  output_tools.h  str_tools.h  types.h
src/dalvik/: dex_annotation.c  dex_annotation.h  dex_class.c  dex_class.h  dex_decompile.c  dex_decompile.h  dex_descriptor.c  dex_descriptor.h  dex_dump.c  dex_dump.h  dex_exception.c  dex_exception.h  dex_expression_builder.c  dex_expression_builder.h  dex_ins.c  dex_ins.h  dex_ins_action.c  dex_ins_action.h  dex_ins_helper.h  dex_lambda.c  dex_lambda.h  dex_meta_helper.h  dex_method.c  dex_method.h  dex_optimizer.c  dex_optimizer.h  dex_pre_optimizer.c  dex_pre_optimizer.h  dex_simulator.c  dex_simulator.h  dex_smali.c  dex_smali.h  dex_structure.h  dex_type_analyse.c  dex_type_analyse.h  dex_writter.c
src/decompiler/: control_flow.c  control_flow.h  debug_pointer.h  descriptor.c  descriptor.h  dominator_tree.c  dominator_tree.h  exception.c  exception.h  expression.c  expression.h  expression_analyse.c  expression_analyse.h  expression_array.c  expression_array.h  expression_assert.c  expression_assert.h  expression_assign.c  expression_assign.h  expression_branches.c  expression_branches.h  expression_chain.c  expression_chain.h  expression_copy_propgation.c  expression_copy_propgation.h  expression_enum.c  expression_enum.h  expression_exception.c  expression_exception.h  expression_goto.c  expression_goto.h  expression_helper.h  expression_if.c  expression_if.h  expression_inline.c  expression_inline.h  expression_inner_class.c  expression_inner_class.h  expression_local_variable.c  expression_local_variable.h  (+42 more)
src/jar/: jar.c  jar.h
src/jvm/: jvm_annotation.c  jvm_annotation.h  jvm_class.c  jvm_class.h  jvm_decompile.c  jvm_decompile.h  jvm_descriptor.c  (+19 more)
toolchains/: toolchain-linux-aarch64.cmake  toolchain-linux-i686.cmake  toolchain-linux-x64.cmake  toolchain-macos-aarch64.cmake  toolchain-macos-x64.cmake  toolchain-win32.cmake  toolchain-win64.cmake
(+90 files in other folders)
